AppControl Manager v2.0.64.0 And Harden System Security v1.0.39.0
* Added optional per user encryption for [the Policies Library](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Sidebar) cache. When enabled (off by default), cached policy files are encrypted using Windows DPAPI and stored for the current user only. The app automatically enforces the chosen encryption setting at startup and whenever the toggle on the Sidebar changes, keeping the on disk cache in sync with the preference. When you encrypt your policy files with this feature, they are accessible only while you are signed into the same Windows user account. If you switch to a different user account or move the cache files to another machine, they will not be readable. This enhances security by ensuring that sensitive policy data is protected and accessible only to the intended user.

   * Using the `Backup All` button under the `Actions` menu creates an unencrypted backup of all policies in the library and saves them in the directory that you selected, regardless of the encryption setting. This is to ensure that users can always access their policies when restoring from a backup, even if they switch to a different user account or machine.

   * Encryption Scope: Select an encryption scope: User, which allows only the current Windows account to decrypt the encrypted policy files, or Machine, which restricts decryption to this device so the files cannot be decrypted if moved to another device.

   * If using Administrator Protection mode in the OS, it's recommended to switch to Machine scope mode. Policies encrypted with Machine scope can be decrypted by any user on the same device, while policies encrypted with User scope can only be decrypted by the user who encrypted them.

* The Scan Levels in each page now visually show the fall back levels and their order. The way the scan levels work has been a frequently asked question, this change helps clarify their workflows and shows how AppControl Ma

--- a/AppControl Manager/MainWindow.xaml
+++ b/AppControl Manager/MainWindow.xaml
@@ -306,6 +306,11 @@
 
                                     <TextBlock x:Name="SidebarMainCaptionTextBlock" x:Uid="SidebarMainCaptionTextBlock" Style="{ThemeResource CaptionTextBlockStyle}" HorizontalAlignment="Center" HorizontalTextAlignment="Center"/>
 
+                                    <customUI:InfoBarV2 IsOpen="{x:Bind ViewModel.MainInfoBarIsOpen, Mode=TwoWay}"
+                                                        Message="{x:Bind ViewModel.MainInfoBarMessage, Mode=OneWay}"
+                                                        Severity="{x:Bind ViewModel.MainInfoBarSeverity, Mode=OneWay}"
+                                                        IsClosable="{x:Bind ViewModel.MainInfoBarIsClosable, Mode=OneWay}" />
+
                                     <Border Translation="{x:Bind ViewModel.BorderTranslation, Mode=OneWay}"
                                             BorderThickness="1"
                                             CornerRadius="15"
@@ -599,6 +604,32 @@
                                         <ToggleSwitch x:Uid="ToggleSwitchGeneral"
                                                       x:Name="PersistentPoliciesLibraryToggleSwitch"
                                                       IsOn="{x:Bind AppSettings.PersistentPoliciesLibrary, Mode=TwoWay}"/>
+                                    </customUI:SettingsCardV2>
+
+                                    <customUI:SettingsCardV2 HorizontalContentAlignment="Center"
+                                                             x:Name="PersistentPoliciesLibraryEncryptionSettingsCard"
+                                                             x:Uid="PersistentPoliciesLibraryEncryptionSettingsCard"
+                                                             IsEnabled="{x:Bind AppSettings.PersistentPoliciesLibrary, Mode=TwoWay}"
+                                                             HeaderIcon="{ui:FontIcon Glyph=&#xEC19;}">
+
+                                        <ToggleSwitch x:Uid="ToggleSwitchGeneral"
+                                                      HorizontalAlignment="Center"
+                                                      x:Name="PersistentPoliciesLibraryEncryptionToggleSwitch"
+                                                      IsOn="{x:Bind AppSettings.EncryptPoliciesLibrary, Mode=TwoWay}"/>
+
+                                    </customUI:SettingsCardV2>
+
+                                    <customUI:SettingsCardV2 HorizontalContentAlignment="Center"
+                                                             x:Name="PersistentPoliciesLibraryEncryptionScopeSettingsCard"
+                                                             x:Uid="PersistentPoliciesLibraryEncryptionScopeSettingsCard"
+                                                             IsEnabled="{x:Bind AppSettings.PersistentPoliciesLibrary, Mode=TwoWay}"
+                                                             HeaderIcon="{ui:FontIcon Glyph=&#xE748;}">
+
+                                        <ToggleSwitch x:Uid="PersistentPoliciesLibraryEncryptionScopeToggleSwitch"
+                                                      HorizontalAlignment="Center"
+                                                      x:Name="PersistentPoliciesLibraryEncryptionScopeToggleSwitch"
+                                                      IsOn="{x:Bind AppSettings.EncryptionScopePoliciesLibrary, Mode=TwoWay}"/>
+
                                     </customUI:SettingsCardV2>
 
                                     <HyperlinkButton x:Name="SidebarGuideHyperlinkButton"
